# durak-rust

./: Cargo.toml
src/: assets.rs  card.rs  cards.rs  context.rs  deck.rs  error.rs  game.rs  game_error.rs  game_scenes.rs  game_state.rs  gui.rs  hand.rs  lib.rs  main.rs  mat.rs  player.rs  resources.rs  scene.rs  scenes.rs  shader.wgsl  sprite.rs  storage.rs  timer.rs  ui.rs
